<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.activitiesManagementScreen.StockOutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_stock_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#76A5CC"
        app:title="@string/stock_out"
        app:titleTextColor="#331139" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/tu_ngay"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_tuNgay"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ngay" />

        <Button
            android:id="@+id/btn_chonTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="@string/chon_ngay" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/den_ngay"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_denNgay"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ngay" />

        <Button
            android:id="@+id/btn_chonDN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="@string/chon_ngay" />
    </LinearLayout>

    <Button
        android:id="@+id/btnTimKiem"
        android:layout_width="400dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="Tìm kiếm"
        android:backgroundTint="#8BC34A"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_StockOut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />

</LinearLayout>