<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.activitiesCreate.CreateBillActivity">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#7A156C73"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tint="#f1f1f1"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_bac"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10dp"
            android:fontFamily="@font/sen"
            android:gravity="center"
            android:text="@string/t_o_h_a_n"
            android:textColor="#F1F1F1"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_height="1dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChoose"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:text="@string/ch_n_s_n_ph_m"
                android:textSize="18sp"
                android:fontFamily="@font/sen"
                app:cornerRadius="7dp"
                app:backgroundTint="#7A156C73"/>
            <View
                android:id="@+id/line0"
                android:layout_below="@id/btnChoose"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_marginBottom="7dp"
                android:layout_height="1dp"/>
            <LinearLayout
                android:id="@+id/layoutCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line0"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line0"
                    android:id="@+id/rcv_product_oder"/>
                <ImageView
                    android:id="@+id/imgNothing"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:tint="#7A156C73"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/bill_nothing"/>
                <TextView
                    android:id="@+id/tvNothing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_n_ph_m_tr_ng"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:fontFamily="@font/sen"
                    android:textColor="#7A156C73"/>
            </LinearLayout>
            <View
                android:id="@+id/line2"
                android:layout_below="@id/layoutCart"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:layout_height="1dp"/>
            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@+id/line2">
                <RadioButton
                    android:id="@+id/rdoStockOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:fontFamily="@font/sen"
                    android:textSize="18sp"
                    android:text="@string/xu_t_kho"/>
                <RadioButton
                    android:id="@+id/rdoInventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sen"
                    android:textSize="18sp"
                    android:text="@string/nh_p_kho"/>
            </RadioGroup>
            <View
                android:id="@+id/line3"
                android:layout_below="@id/radio"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_marginVertical="7dp"
                android:layout_height="1dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:endIconMode="clear_text"
                android:layout_below="@id/line3">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ghi_ch"
                    android:fontFamily="@font/sen"
                    android:textSize="16sp"
                    android:layout_toRightOf="@id/tvNote"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:id="@+id/line4"
                android:layout_below="@id/tilNote"
                android:layout_width="match_parent"
                android:background="#ddd"
                android:layout_marginVertical="7dp"
                android:layout_height="1dp"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true">
        <View
            android:id="@+id/line10"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:background="#ddd"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tv_totalQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line10"
            android:layout_alignParentStart="true"
            android:textColor="#4C4949"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/sen"
            android:text="0 sản phẩm"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_totalQuantity"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/sen"
            android:text="Tổng :"
            android:textStyle="bold"
            android:textColor="#FF5722"
            android:textSize="19dp" />
        <TextView
            android:id="@+id/tv_totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_totalQuantity"
            android:layout_toEndOf="@id/tong"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/sen"
            android:text=""
            android:textColor="#4C4949"
            android:textSize="18dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateTheBill"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_below="@id/line10"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#7A156C73"
            android:fontFamily="@font/sen"
            android:text="@string/l_u"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="0dp" />
    </RelativeLayout>
</RelativeLayout>