<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#fff"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="#171717"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/Id"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/invoicer"
            android:layout_marginTop="5dp"
            android:textSize="12dp"
            android:text="acav"
            android:maxLines="2"
            android:paddingHorizontal="10dp"
            android:textColor="#171717"
            android:fontFamily="@font/sen"
            android:id="@+id/tvIdBill"/>
        <TextView
            android:id="@+id/invoicer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Id"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"
            android:text="@string/invoicer"
            android:textColor="#171717"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Id"
            android:layout_toEndOf="@id/invoicer"
            android:layout_marginTop="5dp"
            android:text=""
            android:textSize="16sp"
            android:fontFamily="@font/sen"
            android:paddingHorizontal="10dp"
            android:id="@+id/tvInvoicer"/>
        <TextView
            android:id="@+id/statusBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/invoicer"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"
            android:text="Status :"
            android:textColor="#171717"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/invoicer"
            android:layout_toEndOf="@id/invoicer"
            android:layout_marginTop="5dp"
            android:text=""
            android:textSize="16sp"
            android:fontFamily="@font/sen"
            android:paddingHorizontal="10dp"
            android:id="@+id/tvStatus"/>
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusBill"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"
            android:text="Total :"
            android:textColor="#171717"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusBill"
            android:layout_toEndOf="@id/invoicer"
            android:layout_marginTop="5dp"
            android:text=""
            android:textSize="16sp"
            android:fontFamily="@font/sen"
            android:paddingHorizontal="10dp"
            android:id="@+id/tvTotal"/>
        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"
            android:text="@string/note"
            android:textColor="#171717"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:layout_toEndOf="@id/invoicer"
            android:layout_marginTop="5dp"
            android:text=""
            android:textSize="16sp"
            android:fontFamily="@font/sen"
            android:paddingHorizontal="10dp"
            android:id="@+id/tvNote"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/note"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:text=""
            android:gravity="end"
            android:textSize="11sp"
            android:fontFamily="@font/b612_mono_bold_italic"
            android:paddingHorizontal="10dp"
            android:id="@+id/tvDay"/>
    </RelativeLayout>
</LinearLayout>